fix on safari id done

--- a/sass/_aboutme.sass
+++ b/sass/_aboutme.sass
@@ -5,6 +5,7 @@
     background-color: #710CE8
     color: white
     overflow: hidden
+    position: relative
     h1
         text-transform: uppercase
         font-weight: bold
@@ -31,10 +32,6 @@
         p
             margin-bottom: 40px
             text-indent: 40px
-
-@media (orientation: landscape)
-    .aboutme
-        position: relative
 
 @media (orientation: landscape) and (min-width: 1024px)
     .aboutme 
