--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -74,9 +74,7 @@ header
 @media(orientation: landscape)
     header
         flex-direction: row
-        justify-content: center
         align-items: flex-end
-        height: 100vh
         .welcome
             flex-basis: 50%
             align-self: center
